# aoc-kit

./: .editorconfig  Cargo.toml  README.md  aoc.yml  solution.rs
src/: commands.rs  config.rs  http.rs  main.rs  utils.rs
src/commands/: init.rs  login.rs  scaffold.rs  submit.rs
src/templates/: cargo.hbs  lib.hbs  part.hbs  solution.hbs
